<resources>
    <string name="app_name">PanApp</string>
    <string name="VERSION">1.0.0</string>
    <string name="action_settings">Configurações</string>
    <string name="error_google_sign_in">Erro ao realizar Login com a conta do Google!</string>
    <string name="google_sign_in_key">457659997751-49rg9hs7a7hmqmsqk2c5t05r2dgkscbg.apps.googleusercontent.com</string>
    <string name="action_sign_in_facebook">Entrar com Facebook</string>
    <string name="facebook_app_id">961896533936878</string>
    <string name="terms_cadastre">Li e concordo com os <u>Termos de Uso</u> do PanApp</string>
    <string name="register_name_required">Campo nome obrigatório!</string>
    <string name="register_email_required">Campo email obrigatório!</string>
    <string name="register_password_required">Campo senha obrigatório!</string>
    <string name="register_name_size_invalid">Seu nome deve ter entre 3 e 20 caracteres!</string>
    <string name="register_pass_size_invalid">Sua senha deve ter entre 5 e 16 caracteres!</string>
    <string name="register_email_char_invalid">Por favor forneça um email válido</string>
    <string name="forgot_pass"><u>Esqueceu a senha?</u></string>
    <string name="remember_me">Lembrar</string>
    <string name="register_field_required">Este campo é obrigatório!</string>
    <string name="register_fone_size_invalid">Tamanho de telefone inválido!</string>
    <string name="register_cnpj_size_invalid">Tamanho de CNPJ inválido!</string>
    <string name="price_product_required">Campo preço obrigatório!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pick_image_intent_text">Escolha o método</string>

    <!--strings do pag seguro -->
    <string name="title_activity_pag_seguro">PagSeguro Demo</string>
    <string name="pagseguro">Encaminhando para Pagamento</string>
    <string name="waiting_for_answer">Aguardando resposta...</string>
    <string name="transaction_cancelled">A transação foi cancelada com sucesso!</string>
    <string name="transaction_succeded">A transação foi efetuada sucesso!</string>
    <string name="transaction_error">A tentativa de compra falhou! Tente novamente!</string>
    <string name="cancel_pagseguro">Deseja realmente cancelar?</string>
    <string name="loading_1">Carregando.</string>
    <string name="loading_2">Carregando..</string>
    <string name="loading_3">Carregando...</string>
    <string name="msg_not_exist_products">Não há nenhum produto cadastrado!</string>
    <string name="msg_not_exist_favorite_bakery">Não há nenhuma padaria favorita!</string>
    <string name="msg_not_exist_pendent_request">Não há nenhum pedido pendente!</string>
    <string name="msg_not_exist_delivered_request">Não há nenhum pedido entregue!</string>
    <string name="msg_not_exist_adress_regitred">Não existem endereços cadastrados!</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="signIn">Entrar</string>
    <string name="register">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="create_account">Criar Conta</string>
    <string name="signin_whit_email">Entrar com Email</string>
    <string name="signin_whit_google">Entrar com google</string>
    <string name="register_bakery_label">Possui uma padaria? Cadastre aqui!</string>
    <string name="cnpj">CNPJ</string>
    <string name="search">Buscar</string>
    <string name="corporate_name">Razão Social</string>
    <string name="fantasy_name">Nome Fantasia</string>
    <string name="phone">Telefone</string>
    <string name="adress">Endereço</string>
    <string name="street">Rua</string>
    <string name="number">Número</string>
    <string name="district">Bairro</string>
    <string name="city">Cidade</string>
    <string name="acess">Acesso</string>
    <string name="register_bakery">Cadastrar padaria</string>
    <string name="no_bakeries">Não há padarias cadastradas!</string>
    <string name="total">Total</string>
    <string name="real_tag">R$</string>
    <string name="zero_value">00,00</string>
    <string name="finish">Finalizar</string>
    <string name="no_products">Não há produtos cadastrados!</string>
    <string name="zero">00</string>
    <string name="items">Itens</string>
    <string name="chose_delivery_adress">Escolha o endereço de entrega:</string>
    <string name="chose_day">Escolha o dia:</string>
    <string name="today">Hoje - </string>
    <string name="tomorrow">Amanhã - </string>
    <string name="chose_hour">Escolha o horário desejado:</string>
    <string name="zero_hour">00:00</string>
    <string name="street_name">Nome da rua</string>
    <string name="no_adress">Não existem endereços cadastrados!</string>
    <string name="no_has_delivery">A padaria não possui delivery!</string>
    <string name="send">Enviar</string>
    <string name="state">Estado</string>
    <string name="start_time">Horário Inicial:</string>
    <string name="finish_time">Horário Final:</string>
    <string name="bakery_found">Padaria encontrada!</string>
    <string name="bakery_not_found">Padaria não encontrada!</string>
    <string name="work_time">Horário de funcionamento:</string>
    <string name="no_pendent_requests">Não há pedidos pendentes!</string>
    <string name="no_delivered_requests">Não há pedidos entregues!</string>
    <string name="bakery_name">Nome Padaria</string>
    <string name="km">km</string>
    <string name="zero_single">0</string>
    <string name="add">Adicionar</string>
    <string name="add_to_cart">adicionar ao carrinho</string>
    <string name="remove">remover</string>
    <string name="cancel">cancelar</string>
    <string name="chose_unit">Escolha a quantidade</string>
    <string name="add_photo">Adicionar foto</string>
    <string name="product_name">Nome do produto</string>
    <string name="product_price">Preço do produto</string>
    <string name="category">Categoria</string>
    <string name="add_product">ADICIONAR PRODUTO</string>
    <string name="control_stock">Controlar Estoque?</string>
    <string name="no_bakeries_favorites">Não há padarias favoritas!</string>
    <string name="change_status">Alterar status</string>
    <string name="x">x</string>
    <string name="empty_cart">Carrinho vazio!</string>
    <string name="no_feed">Sem novidades!</string>
    <string name="no_offers">Não há ofertas no momento!</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="select_product">Selecione um produto</string>
    <string name="add_offer">Adicionar oferta</string>
    <string name="units">Quantidade</string>
    <string name="discount">Desconto</string>
    <string name="original_price">Preço Original</string>
    <string name="price_in_offer">Preço em Oferta</string>
    <string name="update_offer">ATUALIZAR OFERTA</string>
    <string name="percent">%</string>
    <string name="choose_product">Escolha o produto:</string>
    <string name="five">5</string>
    <string name="ready_for_withdraw">Pronto para retirada</string>
    <string name="retired">Produto retirado</string>
    <string name="change">alterar</string>
    <string name="update">atualizar</string>
    <string name="update_status">atualizar status</string>
    <string name="request_received">Pedido recebido</string>
    <string name="ready_for_send">Pronto para envio</string>
    <string name="product_delivered">Produto entregue</string>
    <string name="in_transit">Em trânsito</string>
    <string name="msg_update_status">Status atualizado!</string>
    <string name="msg_status_no_update">Não houve alteração no status atual! Para voltar clique em cancelar</string>
    <string name="msg_ready_from_withdraw">está pronto para retirada</string>
    <string name="msg_was_withdrawn">foi retirado</string>
    <string name="msg_ready_from_delivery">está pronto para o envio</string>
    <string name="msg_on_the_way">à caminho!</string>
    <string name="msg_was_delivered">foi entregue</string>
    <string name="no_historic">Sem histórico para exibir!</string>
    <string name="card_number">Número do cartão</string>
    <string name="expiration_date">Data de expiração</string>
    <string name="flag">Bandeira</string>
    <string name="finish_payment">Finalizar pagamento</string>
    <string name="field_security_code_size_invalid">Campo código deve ter 3 digitos!</string>
    <string name="field_card_number_size_invalid">Este campo contém 12 digitos!</string>
    <string name="field_verify">Verifique a data informada!</string>
    <string name="code_abre">Cód.</string>
    <string name="kms">kms</string>
    <string name="twenty">20</string>
    <string name="search_bakery_until">Buscar estabelecimentos até:</string>
    <string name="notification">Notificações</string>
    <string name="save_changes">salvar alterações</string>
    <string name="version">versão</string>
    <string name="code">Código</string>
    <string name="cep">CEP</string>
    <string name="complement">Complemento</string>
    <string name="reference">Referência</string>
    <string name="msg">Ou deixe sua mensagem aqui, que logo retornaremos!</string>
    <string name="no_connection_internet">Sem conexão com a internet!</string>
</resources>
