<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/chose_delivery_adress"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_adress_delivery"
            android:padding="8dp"
            android:layout_height="180dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent" />

        <ProgressBar
            android:id="@+id/simpleProgressBar"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/chose_day"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/rg_date_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:checkedButton="@+id/rb_today">

        <RadioButton
            android:id="@+id/rb_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today" />

        <RadioButton
            android:id="@+id/rb_tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/chose_hour"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/zero_hour"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="8dp"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>