<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/chose_day"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:paddingLeft="8dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rg_date_withdraw"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:checkedButton="@+id/rb_today_withdraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_today_withdraw"
            android:text="@string/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_tomorrow_withdraw"
            android:text="@string/tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:id="@+id/lbl03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/work_time"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/zero_hour"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text=" - "
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_finish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/zero_hour"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:text="@string/chose_hour"
        android:paddingLeft="8dp"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:id="@+id/tv_time_withdraw"
        android:text="@string/zero_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_finish_withdraw"
        android:elevation="8dp"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>