<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="42sp">

    <ImageView
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/ic_cart"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_shopping_cart_white_18dp" />

    <TextView
        android:id="@+id/tv_units"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:text="@string/zero"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_item_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="6dp"
        android:text="@string/items"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/real_tag"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center_vertical|end"
        android:text="@string/zero_value"
        android:textColor="#ffffff"
        android:textSize="24sp" />

</LinearLayout>