<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50sp">

    <TextView
        android:id="@+id/tv_total_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/total"
        android:textColor="#A9A9A9"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/real_tag"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="#696969"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_total_price_cart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        android:text="@string/zero_value"
        android:textColor="#696969"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_finish_purchase"
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:background="@color/colorPrimary"
        android:elevation="8dp"
        android:text="@string/finish"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center_vertical|end"
        android:textSize="12sp"
        android:paddingLeft="4dp"
        android:drawableLeft="@drawable/ic_check_circle_white_18dp"
        android:drawableStart="@drawable/ic_check_circle_white_18dp"
        android:onClick="finishBuy"
        android:textColor="#ffffff" />

</LinearLayout>