<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginEnd="32sp"
        android:layout_marginStart="32sp"
        android:layout_marginTop="16sp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="200sp"
            android:layout_height="140sp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="200sp"
                android:layout_height="140sp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="200sp"
                android:layout_height="140sp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_image_black_48dp" />

                <ProgressBar
                    android:id="@+id/simpleProgressBar"
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp" />

            </LinearLayout>
        </RelativeLayout>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:hint="@string/select_product"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textSize="20sp"
            app:met_floatingLabel="normal" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:hint="@string/product_name"
            android:textSize="20sp" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/lbl_old_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/original_price"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:text="@string/real_tag"
                android:textSize="20sp" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/tv_product_old_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:hint="@string/product_price"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/lbl_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/discount"
                android:textSize="14sp" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/tv_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="@string/zero"
                android:textSize="20sp" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/lbl_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="@string/percent"
                android:textSize="14sp" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:max="70"
            android:secondaryProgress="70"
            android:progress="5" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/lbl_price_in_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/price_in_offer"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:text="@string/real_tag"
                android:textSize="20sp" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/tv_product_price_in_offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:hint="@string/product_price"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="120sp"
            android:layout_height="36sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12sp"
            android:background="@drawable/shape_linear_layout"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/units"
                android:inputType="number"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/btn_radius_28dp_primary_color"
            android:text="@string/add_offer"
            android:textColor="#ffffff"
            android:onClick="saveOffer"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>